--- a/bookingapi/.env
+++ b/bookingapi/.env
@@ -1,3 +1,5 @@
 MONGO = mongodb+srv://mongo:FM69XR69@cluster0.tljewem.mongodb.net/booking?retryWrites=true&w=majority
 
 JWT = 8hBehDkfhR4kjn
+
+PORT = 8800
